debci (1.0.2) UNRELEASED; urgency=medium

  * Fix some excessive amd64 hardcoding in the test suite. Thanks Colin
    Watson!

 -- Martin Pitt <mpitt@debian.org> Mon, 28 Dec 2015 04:08:41 +0000

debci (1.0.1) unstable; urgency=medium

  * debian/debci-worker.cron.daily: exit immediately if debci is no longer
    installed (Closes: #807360)
  * Drop Debconf templates
  * bin/debci-batch: make sure package status directory exists before creating
    queue marker

 -- Antonio Terceiro <terceiro@debian.org>  Mon, 14 Dec 2015 15:17:30 -0200

debci (1.0) unstable; urgency=medium

  * This is a major overhaul of the debci infrastructure. debci now works as a
    distributed system, with one or more workers that process test runs, and
    one central node that collects tests results and generates the HTML web
    UI. The nodes communicate using an AMQP server (usually rabbitmq-server),
    and test requests can be submitted from any host that can connect to the
    AMQP server. One will usually have one specific node, perhaps the one that
    runs the result collection/web UI, running `debci batch` to schedule tests.
  * New packages:
    + debci-worker: contains the systemd service units necessary to run the
      worker daemons; must be installed on worker nodes.
    + debci-collector: contains the systemd service unit necessary to run the
      debci collector daemon: will receive test results, and generate the HTML
      web interface; must be installed on a single node in the network
  * The `debci` package contains the debci core, and is still the package that
    needs to be installed for developers trying out debci locally as
    instructed the documentation.
  * Change default backend to `lxc`

  [ Martin Pitt ]
  * Initial implementation of the master/worker setup
  * Add support for importing data from test runs executed elsewhere

  [ Antonio Terceiro ]
  * Finished implementation of the master/worker setup